--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "echarts": "^5.4.1",
     "element-plus": "^2.2.32",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
